# Laptop-price-prediction

./: pyproject.toml
notebooks/: model.ipynb
