[tool.poetry]
name = "price-prediction"
version = "0.1.0"
description = ""
authors = ["gvsreekar <80467534+gvsreekar@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.1.1"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
tdqm = "^0.0.1"
trange = "^0.1.1"
category-encoders = "^2.6.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
